Thu Nov 30 13:28:22 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * TAO_IDL/fe/lex.yy.cpp:
        * TAO_IDL/fe/lex.yy.cpp.diff:

          Recreated the diff file (and reprocessed idl.ll).  patch had
          problems applying the diff that was in the repository (at least on
          Linux).

Thu Nov 30 13:06:46 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/DynamicAny/DynAny_i.cpp
        * tao/DynamicAny/DynArray_i.cpp (init_common):
        * tao/DynamicAny/DynEnum_i.cpp (init_common):
        * tao/DynamicAny/DynSequence_i.cpp (init_common):
        * tao/DynamicAny/DynStruct_i.cpp (init_common):
        * tao/DynamicAny/DynUnion_i.cpp (init_common):
          Use true/false for a bool

Thu Nov 30 12:52:46 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/DynamicAny/DynCommon.cpp:
          Fixed conversion warnings and const changes

        * tao/DynamicAny/DynAnyUtils_T.h:
          Made the code compiling with BCB6 and VC8 but with GCC there
          are some more issues to be resolved

Thu Nov 30 09:58:02 UTC 2006  Vadym Ridosh <vridosh@prismtech.com>

        * tao/Stub.cpp
        * tao/Stub.inl
        * tao/Service_Callbacks.cpp
        * tao/Service_Callbacks.h
        * tao/ORB_Core.cpp
        * tao/ORB_Core.inl
        * tao/ORB_Core.h
        * orbsvcs/orbsvcs/FaultTolerance/FT_Service_Callbacks.h
        * orbsvcs/orbsvcs/FaultTolerance/FT_Service_Callbacks.cpp

          Fix for bugzilla 2709.

Thu Nov 30 05:52:05 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * tests/Bug_2417_Regression/Makefile.am:
        * tests/Bug_2654_Regression/Makefile.am:
        * tests/Bug_2709_Regression/Makefile.am:
        * tests/Hang_Shutdown/Makefile.am:
        * tests/ICMG_Any_Bug/Makefile.am:
        * tests/OctetSeq/Makefile.am:
        * tests/Param_Test/Makefile.am:
        * tests/Portable_Interceptors/ORB_Shutdown/Makefile.am:
        * tests/RTCORBA/Client_Propagated/Makefile.am: